# mulesoft-dev-scripts

./: .ai-agent-metadata.json  .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  PUBLISH.md  PUBLISH_PACKAGES.md  QUICKSTART.md  README.md  README_AI_AGENTS.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  test-examples.yml
api-validator/: README.md  raml-vs-flow-check.py
config-validator/: README.md  validate-properties.py
examples/: test-all-scripts.sh
examples/sample-mule-project/: mule-artifact.json
examples/sample-mule-project-with-issues/: mule-artifact.json
examples/sample-mule-project-with-issues/src/main/mule/: api.xml
examples/sample-mule-project-with-issues/src/main/resources/: application.properties
examples/sample-mule-project/src/main/mule/: api.xml  db-connector.xml
examples/sample-mule-project/src/main/resources/: api.raml  application.properties  secure.properties
examples/sample-mule-project/src/test/munit/: users-test.xml
log-analyzer/: README.md  analyze-logs.py
munit-analyzer/: README.md  munit-coverage.py
runtime-diagnostics/: README.md  mule-runtime-check.sh
security-scanner/: README.md  secret-scan.py
