[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mulesoft-dev-scripts"
version = "1.0.0"
description = "Open-source scripts and tools to solve common MuleSoft development and operations problems"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Upendra Manike"}
]
keywords = [
    "mulesoft",
    "mule",
    "devops",
    "automation",
    "ci-cd",
    "testing",
    "security",
    "configuration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
yaml = ["pyyaml"]
dev = ["flake8", "pylint"]

[project.urls]
Homepage = "https://github.com/upendra-manike/mulesoft-dev-scripts"
Documentation = "https://github.com/upendra-manike/mulesoft-dev-scripts#readme"
Repository = "https://github.com/upendra-manike/mulesoft-dev-scripts"
Issues = "https://github.com/upendra-manike/mulesoft-dev-scripts/issues"

